--- a/src/app/components/produto/produto/produto.component.css
+++ b/src/app/components/produto/produto/produto.component.css
@@ -29,4 +29,9 @@ header, main, footer {
     header, main, footer {
       padding-left: 0;
     }    
+
+    .container {
+        width: 95%;
+        margin: 0 auto;
+    }
 }
