--- a/src/app/components/produto/produto-list/produto-list.component.css
+++ b/src/app/components/produto/produto-list/produto-list.component.css
@@ -8,3 +8,10 @@
     margin: 0 auto;
     margin-top: 20px;
 }
+
+@media only screen and (max-width : 992px) {
+    .container {
+        width: 95%;
+        margin: 0 auto;
+    }
+}
