--- a/src/app/components/estabelecimento/estabelecimento-form/estabelecimento-form.component.html
+++ b/src/app/components/estabelecimento/estabelecimento-form/estabelecimento-form.component.html
@@ -116,7 +116,7 @@
 			
 			<div class="col s12 m12 l12">
 				<button [disabled]="!formEstabelecimento.valid || isSubmit" type="submit" class="col s4 m3 l3 waves-effect waves-light btn blue reset" id="buttons" mz-button>SALVAR</button>
-				<a [routerLink]="['/dashboard/estabelecimentos']" class="col s3 m2 l2 waves-effect waves-light btn red reset" id="buttons">VOLTAR</a>
+				<a [routerLink]="['/dashboard']" class="col s3 m2 l2 waves-effect waves-light btn red reset" id="buttons">VOLTAR</a>
 			</div>
 		
 		</form>
