--- a/src/app/components/estabelecimento/estabelecimento/estabelecimento.component.html
+++ b/src/app/components/estabelecimento/estabelecimento/estabelecimento.component.html
@@ -3,7 +3,7 @@
 		<div class="container">
 
 			<div class="col s8 m6 l6 reset" id="div-titulo">
-				<span class="reset truncate" id="titulo">Estabelecimentos</span> 
+				<span class="reset truncate" id="titulo">Configurações</span> 
 			</div>
 
 			<div class="col s4 m6 l6 reset" id="div-btn-novo">
