--- a/src/app/components/side-nav/nav-bar/nav-bar.component.html
+++ b/src/app/components/side-nav/nav-bar/nav-bar.component.html
@@ -21,6 +21,9 @@
 	</div>
 	<div class="row reset">
 		<div class="col s12 m12 l12 reset" id="item-menu">
+			<span [routerLink]="['/dashboard/estabelecimento']" >Perfil</span>
+		</div>
+		<div class="col s12 m12 l12 reset" id="item-menu">
 			<span (click)="sair();">Sair</span>
 		</div>
 	</div>
